# cpp-project-template

./: CMakeLists.txt
main/: CMakeLists.txt
main/src/: myproject.cpp  myproject.h
test/: CMakeLists.txt
test/src/: test.cpp
